# software-engineering-harness

./: .bandit  .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  harness.yaml  mutmut.toml  pyproject.toml  requirements-ci.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dashboard.yml  openssf-scorecard.yml  pip-audit.yml  pr-a-autoformat.yml  release.yml
.openclaw-runs/01-configuration-validation/: checkpoint.yaml  pr-url.txt
.openclaw-runs/02-state-and-persistence/: checkpoint.yaml  pr-url.txt
.openclaw-runs/03-repository-discovery/: checkpoint.yaml  pr-url.txt
.openclaw-runs/04-model-contracts/: checkpoint.yaml  pr-url.txt
.openclaw-runs/05-specification-planning/: checkpoint.yaml  pr-url.txt
.openclaw-runs/06-tdd-task-execution/: checkpoint.yaml  pr-url.txt
.openclaw-runs/07-validation-remediation/: checkpoint.yaml  pr-url.txt
.openclaw-runs/08-independent-review/: checkpoint.yaml  pr-url.txt
.openclaw-runs/09-git-delivery/: checkpoint.yaml  pr-url.txt
.openclaw-runs/10-ci-monitoring/: checkpoint.yaml  pr-url.txt
.openclaw-runs/11-telegram-ingress/: checkpoint.yaml  pr-url.txt
.openclaw-runs/12-openclaw-packaging/: checkpoint.yaml  pr-url.txt
.openclaw-runs/13-hardening-production-deploy/: checkpoint.yaml  pr-sha.txt  pr-url.txt
.openclaw-runs/14-cluster-a-orchestrator/: checkpoint.yaml  pr-url.txt
.openclaw-runs/14-cluster-a-orchestrator/final-gate/: unified-gate.txt
.openclaw-runs/15-cluster-b-d-production-adapters/: checkpoint.yaml
.openclaw-runs/15-cluster-b-d-production-adapters/final-gate/: unified-gate.txt
dashboard/: index.html
dashboard/assets/: data.js
docker/: Dockerfile  docker-compose.yml
docs/: architecture-overview.md  architecture.md  engineering-dashboard.md  m3-capability-matrix.md  operations.md  providers.md  releasing.md  vertical-acceptance-cluster-n.md  vertical-acceptance.md
docs/evidence/: cluster-g-g1-lift.md  cluster-g-g10.md  cluster-g-g5.md  cluster-i-i1-i4.md  cluster-i-i2.md  tier-1-retrospective.md
docs/user/: configure.md  extend.md  install.md  run.md  sandbox.md  traces.md
examples/: controller.sandbox.yaml  controller.yaml  harness.local.yaml
execution/01-002-config-models/green/: command.txt  result.json  ruff-check.txt  ruff-format.txt  stdout.txt
execution/01-002-config-models/red/: command.txt  result.json  stdout.txt
execution/01-004-precedence/green/: result.json  stdout.txt
execution/01-004-precedence/red/: command.txt  result.json  stdout.txt
execution/01-005-model-routing-validation/green/: result.json  stdout.txt
execution/01-005-model-routing-validation/red/: command.txt  result.json
execution/01-006-cli-validate-config/green/: full-test.txt  result.json  ruff-check.txt  ruff-format.txt  stdout.txt
execution/01-006-cli-validate-config/red/: command.txt  result.json  stdout.txt
execution/01-final-gate/mutation/: command.txt  mutmut-config.txt  result.json
execution/02-state-and-persistence/final-gate/: unified-gate.txt
execution/03-repository-discovery/: README.md  checkpoint.yaml
execution/03-repository-discovery/final-gate/: unified-gate.txt
execution/04-model-contracts/: README.md  checkpoint.yaml
execution/04-model-contracts/final-gate/: unified-gate.txt
execution/05-specification-planning/: README.md  RED-all.txt
execution/05-specification-planning/final-gate/: unified-gate.txt
execution/06-tdd-task-execution/: README.md
execution/06-tdd-task-execution/final-gate/: unified-gate.txt
execution/07-validation-remediation/: README.md
execution/07-validation-remediation/final-gate/: unified-gate.txt
execution/08-independent-review/: README.md  _collect-red.txt
execution/08-independent-review/final-gate/: unified-gate.txt
execution/09-git-delivery/: README.md
execution/09-git-delivery/final-gate/: unified-gate.txt
execution/10-ci-monitoring/: README.md
execution/10-ci-monitoring/final-gate/: unified-gate.txt
execution/11-telegram-ingress/: README.md
execution/11-telegram-ingress/final-gate/: unified-gate.txt
execution/12-openclaw-packaging/: README.md
execution/12-openclaw-packaging/final-gate/: unified-gate.txt
execution/13-hardening-production-deploy/: README.md  red.json
execution/13-hardening-production-deploy/final-gate/: unified-gate.txt
scripts/: check_version_drift.py  mutation_gate.py  render_dashboard.py
src/seharness/: __init__.py  cli.py  config.py  config_loader.py  exceptions.py  state_machine.py
src/seharness/artifacts/: store.py  traceability.py
src/seharness/ci/: __init__.py  checks.py  monitor.py  polling.py  readiness.py  remediation.py
src/seharness/controller/: __init__.py  application_service.py  config.py  pause_resume.py  real_adapters.py  run_ledger.py
src/seharness/dashboard/: __init__.py  renderer.py  server.py
src/seharness/delivery/: __init__.py  backend.py  branch.py  commit.py  gate.py  idempotency.py  pr.py
src/seharness/domain/: enums.py  requests.py  requirements.py  results.py
src/seharness/execution/: __init__.py  completion.py  evidence.py  paths.py  service.py  workspace.py
src/seharness/models/: __init__.py  base.py  codex.py  fake.py  minimax.py  minimax_m3_composition.py  minimax_transport.py  output_repair.py  provider_readiness.py  readiness_validation.py  router.py
src/seharness/observability/: __init__.py  redactor.py  trace.py
src/seharness/orchestrator/: __init__.py  budgets.py  completion_policy.py  controlled_patches.py  delivery.py  independent_review.py  leases.py  llm_task_runner.py  minimax_budget_tracker.py  orchestrator.py  per_phase_budget.py  phases.py  provider_evidence.py  red_green_cycle.py  runner.py  runtime_profile.py  services.py  spec_plan_schemas.py  types.py  (+1 more)
tests/: conftest.py
tests/_testing_helpers/: flaky_detector.py  flaky_plugin.py  test_flaky_detector.py  test_flaky_plugin_smoke.py
tests/e2e/: _bootstrap.py  test_genuine_vertical_slice.py  test_m3_offline_vertical.py  test_minimax_live_smoke.py  test_real_vertical_slice.py  test_vertical_slice.py
tests/unit/: test_cli_validate_config.py
(+421 files in other folders)
