[project]
name = "seharness"
version = "0.1.0"
description = "Framework-neutral Python software-engineering harness for OpenClaw"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "johrenberger" }]
keywords = ["harness", "openclaw", "automation", "tdd", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

dependencies = [
    "pydantic>=2.7,<3",
    "typer>=0.12,<1",
    "pyyaml>=6.0,<7",
    "structlog>=24.1,<25",
    "aiohttp>=3.9,<4",
    "python-telegram-bot>=21.0,<22",
]

[project.optional-dependencies]
sandbox = [
    "docker>=7.0,<8",
]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=5.0,<6",
    "pytest-bdd>=7.0,<8",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
    "mutmut>=2.4,<3",
    "types-PyYAML",
    "types-aiofiles",
    "docker>=7.0,<8",
]

[project.scripts]
seharness = "seharness.cli:main"
harness-telegram-bot = "seharness.telegram_runtime.bot_runtime:cli"
harness-dashboard = "seharness.dashboard.server:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seharness"]
include = [
    "src/seharness/skills/*/SKILL.md",
    "src/seharness/skills/*/*.md",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "C4",           # comprehensions
    "SIM",          # simplify
    "PL",           # pylint
    "RUF",          # ruff-specific
]
ignore = [
    "PLR0913",  # too many arguments
    "PLR2004",  # magic values - acceptable for config defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101", "ARG", "FBT", "PLC0415", "RUF100"]
"src/seharness/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
plugins = ["pydantic.mypy"]
exclude = [
    "examples/",
    "build/",
    "dist/",
    ".venv/",
    "tests/fixtures/",
]

[[tool.mypy.overrides]]
module = "mutmut.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["docker", "docker.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=seharness",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
# Allow ``pytest`` to import ``seharness`` from ``src/`` even when the
# package is not installed in the active interpreter (e.g. a fresh clone
# or a developer running ``pytest --no-cov`` from the system shell).
# CI still installs the package via ``pip install -e .[dev]`` so this
# setting is belt-and-suspenders there.
pythonpath = ["src"]
markers = [
    "bdd: BDD acceptance tests",
    "contract: contract tests for adapter boundaries",
    "integration: integration tests using temporary repos",
    "recovery: recovery and resume tests",
    "security: security tests",
    "workflow: workflow tests",
    "unit: unit tests",
]

[tool.coverage.run]
branch = true
source = ["src/seharness"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 90
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []

[tool.pip-audit]
# Use PyPI's advisory database
require-hashes = false
