[project]
name = "seharness"
version = "0.1.0"
description = "Framework-neutral Python software-engineering harness for OpenClaw"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "johrenberger" }]
keywords = ["harness", "openclaw", "automation", "tdd", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

dependencies = [
    "pydantic>=2.7,<3",
    "typer>=0.12,<1",
    "pyyaml>=6.0,<7",
    "structlog>=24.1,<25",
    "aiohttp>=3.9,<4",
    "python-telegram-bot>=21.0,<22",
]

[project.optional-dependencies]
sandbox = [
    "docker>=7.0,<8",
]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=5.0,<6",
    "pytest-bdd>=7.0,<8",
    "pytest-rerunfailures>=14,<17",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
    "mutmut>=2.4,<3",
    "types-PyYAML",
    "types-aiofiles",
    "docker>=7.0,<8",
    "diff-cover>=10.0,<11",
]

[project.scripts]
seharness = "seharness.cli:main"
harness-telegram-bot = "seharness.telegram_runtime.bot_runtime:cli"
harness-dashboard = "seharness.dashboard.server:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seharness"]
include = [
    "src/seharness/skills/*/SKILL.md",
    "src/seharness/skills/*/*.md",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "C4",           # comprehensions
    "SIM",          # simplify
    "PL",           # pylint
    "RUF",          # ruff-specific
]
ignore = [
    "PLR0913",  # too many arguments
    "PLR2004",  # magic values - acceptable for config defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101", "ARG", "FBT", "PLC0415", "RUF100"]
"src/seharness/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
plugins = ["pydantic.mypy"]
exclude = [
    "examples/",
    "build/",
    "dist/",
    ".venv/",
    "tests/fixtures/",
]

[[tool.mypy.overrides]]
module = "mutmut.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["docker", "docker.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=seharness",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    # G1c: test analytics. Capture top-10 slowest tests > 50 ms; emit
    # JUnit XML for downstream consumers (GH Actions, dashboard); enable
    # up to 3 reruns for flaky detection. Output the flaky-test JSON
    # alongside the JUnit XML.
    "--durations=10",
    "--durations-min=0.05",
    "--junit-xml=junit.xml",
    "--reruns=3",
    "--seharness-flaky-output=flaky-tests.json",
]
testpaths = ["tests"]
# Allow ``pytest`` to import ``seharness`` from ``src/`` even when the
# package is not installed in the active interpreter (e.g. a fresh clone
# or a developer running ``pytest --no-cov`` from the system shell).
# CI still installs the package via ``pip install -e .[dev]`` so this
# setting is belt-and-suspenders there.
pythonpath = ["src"]
markers = [
    "bdd: BDD acceptance tests",
    "contract: contract tests for adapter boundaries",
    "integration: integration tests using temporary repos",
    "recovery: recovery and resume tests",
    "security: security tests",
    "workflow: workflow tests",
    "unit: unit tests",
]

[tool.coverage.run]
branch = true
source = ["src/seharness"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
# G1: enforced by CI. Lifted from 88 to 89 in the G1 PR (lift-coverage
# slice) by adding:
#   - dispatch error-path tests for telegram/transport.py (72% -> 97%)
#   - StubTelegramTransport coverage (100%)
#   - StubChecksClient coverage (79% -> 97%)
#   - Protocol-body pragma:no-cover exclusions (telegram/service.py,
#     ci/checks.py)
#   - LocalCommandRunner + StubRunner coverage (76% -> 100%)
#
# Measured combined statements+branches coverage: 89.17% (CI run before PR).
#
# Long-term goal is 90% (the original SPEC value); each subsequent slice
# that surfaces new error paths should add tests and lift the floor by 1%.
#
# G1b's per-PR diff-cover is the actual regression-prevention mechanism — a
# PR that drops overall coverage fails CI even when the floor stays where it is.
fail_under = 89
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []

[tool.pip-audit]
# G6: require-hashes must be true for supply-chain hardening. CI will
# fail when an installed dep lacks a hash in the lockfile (would
# indicate a MITM risk or unsigned dep).
require-hashes = true

# G2: mutation testing configuration.
#
# Slice 1 is **report-only** (no enforcement). The CI workflow step
# (see ``.github/workflows/ci.yml``) runs mutmut against the PR diff
# using ``--use-patch-file`` so the runtime stays bounded.
#
# We disable one AST mutation class with low signal/cost ratio:
#   * ``argument`` replaces every function-call argument with ``None``,
#     producing a flood of ``AttributeError: 'NoneType' has no attribute
#     X`` survivors that signal nothing actionable about test quality.
#
# NOTE: ``disable_mutation_types`` is a comma-separated string per
# mutmut's config_from_file wrapper (it does ``.split(",")`` at runtime;
# a TOML list crashes with ``AttributeError: 'list' object has no
# attribute 'split'``). Valid mutation types in mutmut 2.5.1 are:
# operator, keyword, number, name, string, fstring, argument, or_test,
# and_test, lambdef, expr_stmt, decorator, annassign.
#
# NOTE: mutmut 2.5.1 forbids combining ``--use-coverage`` with
# ``--use-patch-file``; we omit --use-coverage because the changed lines
# are presumed covered (the G1a coverage floor rejects drops).
#
# Slice 2 (separate PR) will add the threshold gate on top of this
# baseline once we have evidence on the actual kill rate.
[tool.mutmut]
runner = "pytest -x --no-cov -q -p no:cacheprovider --no-header"
tests_dir = "tests"
disable_mutation_types = "argument"

# G2 Slice 2: the threshold gate. ``max_survivors`` is the maximum
# number of mutants that may SURVIVE in a PR's mutmut run before CI
# fails. The default (5) matches the baseline observed on
# ``main @ 0423f95``: 41 killed / 5 survived out of ~110 mutants
# (≈89% kill rate). Tighten this in a follow-up PR once we have
# per-PR survivor-delta evidence.
#
# The gate is enforced by ``scripts/mutation_gate.py`` (chained after
# mutmut in ``.github/workflows/ci.yml``).
[tool.uv]
# G6: lockfile hardening. uv writes hashes for every sdist + wheel
# in uv.lock by default; `lock-deterministic` makes byte-for-byte
# reproducibility work across machines + CI.
lock-deterministic = true
# `hashes = true` is implicit in uv ≥ 0.4 (always written); no setting needed.

[tool.mutation_gate]
max_survivors = 5
